--- a/ColorChanger/WPFWindows/LoginWindow.xaml
+++ b/ColorChanger/WPFWindows/LoginWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorChanger.WPF_Windows.LoginWindow"
+﻿<Window x:Class="ColorChanger.WPFWindows.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorChanger.WPF_Windows"
+        xmlns:local="clr-namespace:ColorChanger.WPFWindows"
         mc:Ignorable="d"
         Title="LoginWindow" Height="450" Width="800">
     <Grid>
