--- a/ColorChanger/WPFWindows/MainWindow.xaml
+++ b/ColorChanger/WPFWindows/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorChanger.MainWindow"
+﻿<Window x:Class="ColorChanger.WPFWindows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorChanger"
+        xmlns:local="clr-namespace:ColorChanger.WPFWindows"
         mc:Ignorable="d"
         Title="ColorChanger by Strbhlfe" Height="600" Width="875">
     <Grid Background="#FF252525">
