--- a/ColorChanger/WPFWindows/LoginWindow.xaml
+++ b/ColorChanger/WPFWindows/LoginWindow.xaml
@@ -22,8 +22,8 @@
         </Grid.RowDefinitions>
         <Label x:Name="labelUsername" Content="Username:" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="White" Height="26" Width="66"/>
         <Label x:Name="labelOAuthToken" Content="OAuth Token:" HorizontalAlignment="Left" Margin="15,45,0,0" VerticalAlignment="Top" Foreground="White" Height="26" Width="81"/>
-        <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="10,15,0,10" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" UndoLimit="50" Grid.Column="1" Height="18" BorderBrush="{x:Null}"/>
-        <TextBox x:Name="tbToken" HorizontalAlignment="Left" Margin="10,50,0,10" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" UndoLimit="200" Grid.Column="1" Height="18" BorderBrush="{x:Null}"/>
+        <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="10,15,0,10" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" UndoLimit="50" Grid.Column="1" Height="18" BorderBrush="{x:Null}" SelectionBrush="#FF494949"/>
+        <TextBox x:Name="tbToken" HorizontalAlignment="Left" Margin="10,50,0,10" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" UndoLimit="200" Grid.Column="1" Height="18" BorderBrush="{x:Null}" SelectionBrush="#FF494949"/>
         <Button x:Name="btnLogIn" Content="Log in" HorizontalAlignment="Left" Margin="52,6,10,0" VerticalAlignment="Top" Width="116" BorderBrush="{x:Null}" Foreground="White" Background="#FF464646" Click="btnLogIn_Click" Grid.Row="1" Grid.ColumnSpan="2" Height="20"/>
         <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" Margin="155,6,10,0" VerticalAlignment="Top" RenderTransformOrigin="0.912,0.067" Width="116" BorderBrush="{x:Null}" Foreground="White" Background="#FF464646" Click="btnCancel_Click" Grid.Row="1" Grid.Column="1" Height="20"/>
 
